--- a/index.html
+++ b/index.html
@@ -29,18 +29,20 @@
         <img src="" alt="" id="rightImage">
       </section>
 
+      <canvas id="myChart" width="400" height="400" style="color: 'black';"></canvas>
 
       <section id="resultSection">
         <button id="resultButton">View Results</button>
         <ul> </ul>
       </section>
+
     </main>
 
     <footer>
       <p>All Right Reserve 2020&copy;</p>
     </footer>
   </section>
-
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
   <script src="js/app.js"></script>
 </body>
 
