--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img src="" alt="" id="rightImage">
       </section>
 
-      <canvas id="myChart" width="400" height="400" style="color: 'black';"></canvas>
+      <canvas id="myChart" width="400" height="400"></canvas>
 
       <section id="resultSection">
         <button id="resultButton">View Results</button>
